--- a/samples/xacteched-campaign.html
+++ b/samples/xacteched-campaign.html
@@ -82,7 +82,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="../index.html" class="back-link">← Back to Portfolio</a>
+    <a href="../index.html#work" class="back-link">← Back to Portfolio</a>
     
     <div class="hero">
       <span class="hero-label">Case Study</span>
