--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Christie Saavedra | OCM & Instructional Design</title>
+  <title>Christie Stephenson Saavedra | OCM & Instructional Design</title>
   <meta name="description" content="Organizational Change Management and Instructional Design professional with 15+ years experience driving technology adoption through strategic communications and training development.">
   
   <!-- Fonts -->
@@ -517,7 +517,7 @@
   <!-- Navigation -->
   <nav>
     <div class="container">
-      <a href="#" class="nav-logo">Christie Saavedra</a>
+      <a href="#" class="nav-logo">Christie Stephenson Saavedra</a>
       <ul class="nav-links">
         <li><a href="#case-studies">Case Studies</a></li>
         <li><a href="#deliverables">Deliverables</a></li>
