--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
           <h3>Technical Skills</h3>
           <ul>
             <li>Microsoft 365</li>
-            <li>ServiceNow</li>
+            <li>Wireframing / Storyboarding</li>
             <li>Confluence / JIRA</li>
             <li>HTML / CSS / JavaScript</li>
             <li>Data Visualization</li>
@@ -898,7 +898,7 @@
 
         <div class="education-card">
           <h3>Additional Training</h3>
-          <div class="degree">WGU (IT Business Management), VSchool (Programming), UVU (Digital Marketing, Entrepreneurship)</div>
+          <div class="degree">WGU (IT Business Management), VSchool (Programming), UVU (Digital Marketing | Entrepreneurship | Business Management)</div>
           <div class="date">Various</div>
         </div>
       </div>
