--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@
           <strong>Location:</strong> Palmetto, FL
         </div>
         <div class="contact-item">
-          <strong>LinkedIn:</strong> <a href="https://linkedin.com/in/christiesaavedra" target="_blank">linkedin.com/in/christiesaavedra</a>
+          <strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/christie-stephenson-saavedra/" target="_blank">linkedin.com/in/christie-stephenson-saavedra</a>
         </div>
       </div>
 
