--- a/dashboard.html
+++ b/dashboard.html
@@ -32,20 +32,25 @@ body {
 
 .portfolio-back-link {
   position: fixed;
-  top: 12px;
+  top: 72px;
   left: 12px;
-  z-index: 9999;
+  z-index: 100;
   background: rgba(99, 102, 241, 0.9);
   backdrop-filter: blur(10px);
   color: white;
-  padding: 10px 18px;
-  border-radius: 8px;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  border-radius: 10px;
   text-decoration: none;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 500;
   box-shadow: 0 4px 15px rgba(99, 102, 241, 0.4);
   transition: all 0.2s;
   border: 1px solid rgba(255,255,255,0.2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .portfolio-back-link:hover {
   background: rgba(99, 102, 241, 1);
@@ -352,17 +357,6 @@ body {
   .header-actions { gap: 4px; }
   .modal { max-width: 100%; margin: 16px; }
   .card-stats-5 { grid-template-columns: repeat(2, 1fr); gap: 8px; }
-  .portfolio-back-link { 
-    position: fixed;
-    top: 72px;
-    left: 12px;
-    right: 12px;
-    z-index: 100;
-    text-align: center;
-    margin: 0;
-    padding: 8px 16px;
-    font-size: 13px;
-  }
   .logo { display: none; }
   .header-tabs { 
     gap: 4px; 
@@ -373,7 +367,7 @@ body {
     font-size: 11px;
   }
   .main-content { 
-    padding: 120px 12px 24px 12px; 
+    padding: 80px 12px 24px 12px; 
     margin-left: 0;
   }
   .sidebar { 
@@ -414,7 +408,7 @@ body {
   </style>
 </head>
 <body>
-  <a href="index.html" class="portfolio-back-link">← Back to Portfolio</a>
+  <a href="index.html" class="portfolio-back-link" title="Back to Portfolio">←</a>
   <div id="root"><div id="loading">Loading dashboard...</div></div>
   
   <script type="text/babel">
