--- a/dashboard.html
+++ b/dashboard.html
@@ -32,7 +32,7 @@ body {
 
 .portfolio-back-link {
   position: fixed;
-  top: 72px;
+  top: 12px;
   left: 12px;
   z-index: 100;
   background: rgba(99, 102, 241, 0.9);
@@ -357,6 +357,9 @@ body {
   .header-actions { gap: 4px; }
   .modal { max-width: 100%; margin: 16px; }
   .card-stats-5 { grid-template-columns: repeat(2, 1fr); gap: 8px; }
+  .portfolio-back-link {
+    top: 72px;
+  }
   .logo { display: none; }
   .header-tabs { 
     gap: 4px; 
@@ -367,7 +370,7 @@ body {
     font-size: 11px;
   }
   .main-content { 
-    padding: 80px 12px 24px 12px; 
+    padding: 130px 12px 24px 12px; 
     margin-left: 0;
   }
   .sidebar { 
