Deliverables removed, Download in Contact and Trademarked and Return to Card exit Nav

--- a/dashboard.html
+++ b/dashboard.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Healthcare Dashboard Demo | Christie Saavedra</title>
+  <title>Healthcare Dashboard Demo | Christie Stephenson Saavedra</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -416,7 +416,7 @@ body {
   </style>
 </head>
 <body>
-  <a href="index.html" class="portfolio-back-link" title="Back to Portfolio">←</a>
+  <a href="index.html#case-studies" class="portfolio-back-link" title="Back to Portfolio">←</a>
   <div id="root"><div id="loading">Loading dashboard...</div></div>
   
   <script type="text/babel">
