--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Christie Saavedra | OCM & Instructional Design</title>
-  <meta name="description" content="Organizational Change Management and Instructional Design professional with 15+ years experience driving technology adoption through strategic communications and training development.">
+  <title>Christie Stephenson Saavedra | OCM & Instructional Design</title>
+  <meta name="description" content="Organizational Change Management and Instructional Design professional with 20+ years experience driving technology adoption through strategic communications and training development.">
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -326,51 +326,6 @@
       font-size: 0.9rem;
     }
 
-    /* Deliverables */
-    .deliverables-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      gap: var(--spacing-md);
-    }
-
-    .deliverable-card {
-      background: var(--color-card);
-      border: 1px solid var(--color-border);
-      border-radius: 8px;
-      padding: var(--spacing-md);
-      transition: transform 0.2s, box-shadow 0.2s;
-    }
-
-    .deliverable-card:hover {
-      transform: translateY(-2px);
-      box-shadow: 0 10px 40px rgba(0,0,0,0.08);
-    }
-
-    .deliverable-icon {
-      font-size: 2rem;
-      margin-bottom: var(--spacing-sm);
-    }
-
-    .deliverable-card h3 {
-      font-size: 1.1rem;
-      font-weight: 600;
-      margin-bottom: var(--spacing-xs);
-    }
-
-    .deliverable-card p {
-      font-size: 0.9rem;
-      color: var(--color-text-secondary);
-      margin-bottom: var(--spacing-sm);
-    }
-
-    .deliverable-type {
-      font-size: 0.75rem;
-      font-weight: 600;
-      color: var(--color-accent);
-      text-transform: uppercase;
-      letter-spacing: 0.1em;
-    }
-
     /* Skills */
     .skills-grid {
       display: grid;
@@ -560,10 +515,10 @@
   <!-- Navigation -->
   <nav>
     <div class="container">
-      <a href="#" class="nav-logo">Christie Saavedra</a>
+      <a href="#" class="nav-logo">Christie Stephenson Saavedra</a>
       <ul class="nav-links">
         <li><a href="#case-studies">Case Studies</a></li>
-        <li><a href="#deliverables">Deliverables</a></li>
+        <li><a href="#testimonials">References</a></li>
         <li><a href="#testimonials">Testimonials</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#contact">Contact</a></li>
@@ -577,7 +532,7 @@
       <div class="hero-content">
         <span class="hero-label animate">Organizational Change Management & Instructional Design</span>
         <h1 class="animate delay-1">Helping organizations adopt technology through strategic communications and training</h1>
-        <p class="hero-subtitle animate delay-2">15+ years driving user adoption by building curriculum, creating dashboards, and developing change management strategies that deliver measurable results.</p>
+        <p class="hero-subtitle animate delay-2">20+ years driving user adoption by building curriculum, creating dashboards, and developing change management strategies that deliver measurable results.</p>
         <div class="hero-stats animate delay-3">
           <div class="stat">
             <div class="stat-number">$200K</div>
@@ -702,66 +657,6 @@
             </div>
             <a href="samples/palmview-lab.html" target="_blank" class="case-study-link">View Case Study →</a>
           </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Deliverables -->
-  <section id="deliverables">
-    <div class="container">
-      <div class="section-header">
-        <div class="section-label">Work Samples</div>
-        <h2 class="section-title">Deliverables</h2>
-      </div>
-
-      <div class="deliverables-grid">
-        <div class="deliverable-card">
-          <div class="deliverable-icon">📊</div>
-          <div class="deliverable-type">Interactive Dashboard</div>
-          <h3>Healthcare Block Management Dashboard</h3>
-          <p>Fully functional React application with drill-down navigation, tier rankings, calendar views, and dispute tracking. 1,795 lines of code.</p>
-          <a href="dashboard.html" target="_blank" class="case-study-link">View Demo →</a>
-        </div>
-
-        <div class="deliverable-card">
-          <div class="deliverable-icon">📣</div>
-          <div class="deliverable-type">Marketing Campaign</div>
-          <h3>XactechED Workforce Program</h3>
-          <p>Complete campaign I created from scratch—billboard, landing page, marketing flyer with my name as program contact, and data-driven infographics.</p>
-          <a href="samples/xacteched-campaign.html" target="_blank" class="case-study-link">View Campaign →</a>
-        </div>
-
-        <div class="deliverable-card">
-          <div class="deliverable-icon">💻</div>
-          <div class="deliverable-type">Software Design</div>
-          <h3>Resolute Services Platform</h3>
-          <p>Healthcare compliance software I helped design—UI/UX, business process analysis, and user stories that reduced billing from 40 hours to 15 minutes.</p>
-          <a href="samples/resolute-services.html" target="_blank" class="case-study-link">View Case Study →</a>
-        </div>
-
-        <div class="deliverable-card">
-          <div class="deliverable-icon">🎓</div>
-          <div class="deliverable-type">Curriculum Development</div>
-          <h3>Arizona Esthetics Institute</h3>
-          <p>State-approved vocational curriculum I developed meeting Arizona Board of Cosmetology requirements, plus school district partnerships for at-risk youth.</p>
-          <a href="samples/arizona-esthetics.html" target="_blank" class="case-study-link">View Case Study →</a>
-        </div>
-
-        <div class="deliverable-card">
-          <div class="deliverable-icon">📚</div>
-          <div class="deliverable-type">Documentation System</div>
-          <h3>Palmview K-8 Knowledge Base</h3>
-          <p>Technical documentation system I built using Stack Overflow methodologies—quick-reference guides, troubleshooting articles, and device management for 500+ devices.</p>
-          <a href="samples/palmview-lab.html" target="_blank" class="case-study-link">View Case Study →</a>
-        </div>
-
-        <div class="deliverable-card">
-          <div class="deliverable-icon">📄</div>
-          <div class="deliverable-type">Resume</div>
-          <h3>Professional Resume</h3>
-          <p>OCM-focused resume highlighting change management, training development, and technology adoption experience.</p>
-          <a href="assets/Resume_Christie_Saavedra.pdf" target="_blank" class="case-study-link">Download PDF →</a>
         </div>
       </div>
     </div>
