--- a/samples/resolute-services.html
+++ b/samples/resolute-services.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Resolute Services | Christie Saavedra</title>
+  <title>Resolute Services | Christie Stephenson Saavedra</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -75,7 +75,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="../index.html#work" class="back-link">← Back to Portfolio</a>
+    <a href="../index.html#case-studies" class="back-link">← Back to Portfolio</a>
     
     <div class="hero">
       <span class="hero-label">Case Study</span>
