--- a/dashboard.html
+++ b/dashboard.html
@@ -416,7 +416,7 @@ body {
   </style>
 </head>
 <body>
-  <a href="index.html#case-studies" class="portfolio-back-link" title="Back to Portfolio">←</a>
+  <a href="index.html#cs-dashboard" class="portfolio-back-link" title="Back to Portfolio">←</a>
   <div id="root"><div id="loading">Loading dashboard...</div></div>
   
   <script type="text/babel">
