--- a/samples/palmview-lab.html
+++ b/samples/palmview-lab.html
@@ -74,7 +74,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="../index.html#case-studies" class="back-link">← Back to Portfolio</a>
+    <a href="../index.html#cs-palmview" class="back-link">← Back to Portfolio</a>
     
     <div class="hero">
       <span class="hero-label">Case Study</span>
