--- a/samples/arizona-esthetics.html
+++ b/samples/arizona-esthetics.html
@@ -75,7 +75,7 @@
 </head>
 <body>
   <div class="container">
-    <a href="../index.html#case-studies" class="back-link">← Back to Portfolio</a>
+    <a href="../index.html#cs-arizona" class="back-link">← Back to Portfolio</a>
     
     <div class="hero">
       <span class="hero-label">Case Study</span>
