navback+logos+notabs

--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
               <span class="result-tag">Real-Time Analytics</span>
               <span class="result-tag">Role-Based Access</span>
             </div>
-            <a href="dashboard.html" target="_blank" class="case-study-link">View Interactive Demo →</a>
+            <a href="dashboard.html" class="case-study-link">View Interactive Demo →</a>
           </div>
         </div>
 
@@ -646,7 +646,7 @@
               <span class="result-tag">MTECH Partnership</span>
               <span class="result-tag">Built From Scratch</span>
             </div>
-            <a href="samples/xacteched-campaign.html" target="_blank" class="case-study-link">View Campaign Materials →</a>
+            <a href="samples/xacteched-campaign.html" class="case-study-link">View Campaign Materials →</a>
           </div>
         </div>
 
@@ -669,7 +669,7 @@
               <span class="result-tag">50% Time Reduction</span>
               <span class="result-tag">Custom Software</span>
             </div>
-            <a href="samples/resolute-services.html" target="_blank" class="case-study-link">View Case Study →</a>
+            <a href="samples/resolute-services.html" class="case-study-link">View Case Study →</a>
           </div>
         </div>
 
@@ -692,7 +692,7 @@
               <span class="result-tag">School District Partnerships</span>
               <span class="result-tag">Built From Scratch</span>
             </div>
-            <a href="samples/arizona-esthetics.html" target="_blank" class="case-study-link">View Case Study →</a>
+            <a href="samples/arizona-esthetics.html" class="case-study-link">View Case Study →</a>
           </div>
         </div>
 
@@ -715,7 +715,7 @@
               <span class="result-tag">Knowledge Base</span>
               <span class="result-tag">Documentation System</span>
             </div>
-            <a href="samples/palmview-lab.html" target="_blank" class="case-study-link">View Case Study →</a>
+            <a href="samples/palmview-lab.html" class="case-study-link">View Case Study →</a>
           </div>
         </div>
       </div>
@@ -935,4 +935,9 @@
     </div>
   </section>
 
-  <!-- Foo
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 Christie Stephenson Saavedra. Built with purpose.</p>
+  </footer>
+</body>
+</html>
