--- a/index.html
+++ b/index.html
@@ -448,6 +448,7 @@
     .case-study-card[data-project="resolute"] { --card-gradient: linear-gradient(135deg, #1E40AF 0%, #3b82f6 100%); }
     .case-study-card[data-project="arizona"] { --card-gradient: linear-gradient(135deg, #dc2626 0%, #f97316 100%); }
     .case-study-card[data-project="palmview"] { --card-gradient: linear-gradient(135deg, #0891b2 0%, #06b6d4 100%); }
+    .case-study-card[data-project="codelab"] { --card-gradient: linear-gradient(135deg, #f59e0b 0%, #eab308 100%); } /* NEW: Amber/yellow for CodeLab */
 
     .case-study-meta {
       display: flex;
@@ -1156,8 +1157,8 @@
               <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
             </a>
             <div class="nav-resume">
-              <a href="assets/Portfolio_Christie_Saavedra.pdf" class="btn btn-outline" target="_blank">Portfolio</a>
-              <a href="assets/Resume_Christie_Saavedra.pdf" class="btn btn-solid" target="_blank">Resume</a>
+              <a href="assets/Resume_Christie_Saavedra.pdf" class="btn btn-outline" target="_blank">View Resume</a>
+              <a href="assets/Resume_Christie_Saavedra.pdf" class="btn btn-solid" download>Download Resume</a>
             </div>
           </div>
         </div>
@@ -1232,6 +1233,21 @@
               <span class="result-tag">Real-Time Analytics</span>
             </div>
             <a href="dashboard.html" class="case-study-link">View Demo <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M5 12h14M12 5l7 7-7 7"/></svg></a>
+          </div>
+
+          <!-- NEW: CodeLab LMS Case Study -->
+          <div class="case-study-card" data-project="codelab" onclick="window.location='codelab/index.html'">
+            <div class="case-study-meta">
+              <span class="case-study-role">Instructional Designer / Developer</span>
+              <span class="case-study-org">· UCF Portfolio</span>
+            </div>
+            <h3 class="case-study-title">Gamified Learning Platform</h3>
+            <p class="case-study-desc">Built a gamified HTML & CSS learning platform using Hirumi's Three-Level Interaction Model. Features XP system, achievements, and mastery-based progression.</p>
+            <div class="case-study-results">
+              <span class="result-tag">6 Interactive Lessons</span>
+              <span class="result-tag">12 Achievements</span>
+            </div>
+            <a href="codelab/index.html" class="case-study-link">Try Demo <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M5 12h14M12 5l7 7-7 7"/></svg></a>
           </div>
 
           <div class="case-study-card" data-project="xacteched" onclick="window.location='samples/xacteched-campaign.html'">
@@ -1477,7 +1493,7 @@
       <p class="modal-subtitle">Choose your preferred way to connect</p>
       
       <div class="contact-options">
-        <a href="mailto:christie.saavedra@gmail.com" class="contact-option">
+        <a href="/cdn-cgi/l/email-protection#92f1fae0fbe1e6fbf7bce1f3f3e4f7f6e0f3d2f5fff3fbfebcf1fdff" class="contact-option">
           <div class="contact-option-icon email">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
@@ -1486,7 +1502,7 @@
           </div>
           <div class="contact-option-text">
             <div class="contact-option-label">Email</div>
-            <div class="contact-option-value">christie.saavedra@gmail.com</div>
+            <div class="contact-option-value"><span class="__cf_email__" data-cfemail="37545f455e44435e5219445656415253455677505a565e5b1954585a">[email&#160;protected]</span></div>
           </div>
         </a>
         
@@ -1517,7 +1533,7 @@
     </div>
   </div>
 
-  <script>
+  <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
     const nav = document.getElementById('nav');
     const backToTop = document.getElementById('backToTop');
     const contactModal = document.getElementById('contactModal');
@@ -1542,16 +1558,4 @@
     }
 
     function closeContactModal(event) {
-      if (!event || event.target === contactModal) {
-        contactModal.classList.remove('active');
-        document.body.style.overflow = '';
-      }
-    }
-
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'Escape') closeContactModal();
-    });
-  </script>
-
-</body>
-</html>
+      if (!event || event.target === co
