--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
     .case-study-card[data-project="resolute"] { --card-gradient: linear-gradient(135deg, #1E40AF 0%, #3b82f6 100%); }
     .case-study-card[data-project="arizona"] { --card-gradient: linear-gradient(135deg, #dc2626 0%, #f97316 100%); }
     .case-study-card[data-project="palmview"] { --card-gradient: linear-gradient(135deg, #0891b2 0%, #06b6d4 100%); }
-    .case-study-card[data-project="codelab"] { --card-gradient: linear-gradient(135deg, #f59e0b 0%, #eab308 100%); } /* NEW: Amber/yellow for CodeLab */
+    .case-study-card[data-project="codelab"] { --card-gradient: linear-gradient(135deg, #059669 0%, #10b981 100%); } /* XactechED green to match parent project */
 
     .case-study-meta {
       display: flex;
@@ -1178,11 +1178,11 @@
         <div class="stats-cards">
           <div class="stat-item">
             <div class="stat-card">
-              <div class="stat-number">$200K</div>
-              <div class="stat-sub">Grant</div>
+              <div class="stat-number">$521K</div>
+              <div class="stat-sub">Grants</div>
             </div>
-            <div class="stat-label">Grant Secured</div>
-            <div class="stat-desc">Governor's committee</div>
+            <div class="stat-label">Grants Secured</div>
+            <div class="stat-desc">State funding</div>
           </div>
           <div class="stat-item">
             <div class="stat-card">
@@ -1239,10 +1239,10 @@
           <div class="case-study-card" data-project="codelab" onclick="window.location='codelab/index.html'">
             <div class="case-study-meta">
               <span class="case-study-role">Instructional Designer / Developer</span>
-              <span class="case-study-org">· UCF Portfolio</span>
+              <span class="case-study-org">· XactechED · Xactware</span>
             </div>
             <h3 class="case-study-title">Gamified Learning Platform</h3>
-            <p class="case-study-desc">Built a gamified HTML & CSS learning platform using Hirumi's Three-Level Interaction Model. Features XP system, achievements, and mastery-based progression.</p>
+            <p class="case-study-desc">Built a gamified HTML & CSS learning platform using Hirumi's Three-Level Interaction Model. Features XP system, achievements, and mastery-based progression—demonstrating the curriculum approach I developed for the XactechED program.</p>
             <div class="case-study-results">
               <span class="result-tag">6 Interactive Lessons</span>
               <span class="result-tag">12 Achievements</span>
@@ -1258,7 +1258,7 @@
             <h3 class="case-study-title">Workforce Development Program</h3>
             <p class="case-study-desc">Conceived and launched a statewide coding education program. Built the XactechED brand and delivered presentations to the governor's committee.</p>
             <div class="case-study-results">
-              <span class="result-tag">$200,000 Grant</span>
+              <span class="result-tag">$521,000+ Grants</span>
               <span class="result-tag">MTECH Partnership</span>
             </div>
             <a href="samples/xacteched-campaign.html" class="case-study-link">View Campaign <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M5 12h14M12 5l7 7-7 7"/></svg></a>
