What's Protected As stated in your updated README:  ✅ Original Code - All source code for web apps, demos, and interactive features ✅ Visual Assets - Logos, graphics, icons, and UI designs ✅ Content - Case study narratives, documentation, and instructional materials ✅ Design Systems - Color schemes, typography, and layout patterns  Also Included in This Update  🎯 Real Live Preview in CodeLab (user code renders in iframe) ⬅️ Back to Portfolio navigation throughout CodeLab 🎮 Improved Konami Code instructions

--- a/index.html
+++ b/index.html
@@ -1474,7 +1474,8 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="footer-content">
-        © 2025 Christie Stephenson Saavedra. All rights reserved.
+        <div style="margin-bottom: 0.5rem;">© 2025 Christie Stephenson Saavedra. All rights reserved.</div>
+        <div style="font-size: 0.75rem; color: var(--color-text-secondary); opacity: 0.7;">Original code, design, UI/UX, and content. All demos and case studies are original portfolio work.</div>
       </div>
     </footer>
 
