--- a/dashboard.html
+++ b/dashboard.html
@@ -644,6 +644,7 @@ function Sidebar({ onSettingsOpen }) {
       ))}
       <div style={{ marginTop: 'auto' }}>
         <button className="nav-btn" onClick={onSettingsOpen} title="Settings">⚙️</button>
+        <div style={{ fontSize: '9px', color: 'rgba(255,255,255,0.3)', textAlign: 'center', padding: '8px 4px', lineHeight: 1.3 }}>© 2025<br/>Christie S.</div>
       </div>
     </aside>
   );
@@ -1006,6 +1007,24 @@ function SettingsModal({ onClose }) {
             </div>
             <div style={{ marginTop: 16, padding: 12, background: 'rgba(255,255,255,0.05)', borderRadius: 8, fontSize: 13, color: 'rgba(255,255,255,0.6)' }}>
               <strong style={{ color: 'rgba(255,255,255,0.8)' }}>Available Formats:</strong> PDF, Excel (.xlsx), CSV
+            </div>
+          </div>
+          
+          <div className="config-section">
+            <div className="config-title">ℹ️ About This Demo</div>
+            <div style={{ padding: 16, background: 'rgba(255,255,255,0.03)', borderRadius: 12, border: '1px solid rgba(255,255,255,0.1)' }}>
+              <p style={{ margin: '0 0 12px 0', fontSize: 14, color: 'rgba(255,255,255,0.8)' }}>
+                <strong>Healthcare Dashboard Demo</strong><br/>
+                <span style={{ color: 'rgba(255,255,255,0.5)' }}>OCM Portfolio Piece - Operating Room Block Scheduling Analytics</span>
+              </p>
+              <p style={{ margin: '0 0 12px 0', fontSize: 13, color: 'rgba(255,255,255,0.6)' }}>
+                Demonstrates strategic change management approach: stakeholder communication, 
+                role-based interfaces, and data-driven decision support.
+              </p>
+              <div style={{ paddingTop: 12, borderTop: '1px solid rgba(255,255,255,0.1)', fontSize: 12, color: 'rgba(255,255,255,0.4)' }}>
+                © 2025 Christie Stephenson Saavedra. All rights reserved.<br/>
+                Original code, design, UI/UX, and demo content.
+              </div>
             </div>
           </div>
         </div>
