--- a/index.html
+++ b/index.html
@@ -1495,7 +1495,7 @@
       <p class="modal-subtitle">Choose your preferred way to connect</p>
       
       <div class="contact-options">
-        <a href="/cdn-cgi/l/email-protection#92f1fae0fbe1e6fbf7bce1f3f3e4f7f6e0f3d2f5fff3fbfebcf1fdff" class="contact-option">
+        <a href="christie.saavedra@gmail.com" class="contact-option">
           <div class="contact-option-icon email">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
