--- a/index.html
+++ b/index.html
@@ -1504,7 +1504,7 @@
           </div>
           <div class="contact-option-text">
             <div class="contact-option-label">Email</div>
-            <div class="contact-option-value"><span class="__cf_email__" data-cfemail="37545f455e44435e5219445656415253455677505a565e5b1954585a">[christie.saavedra@gmail.com]</span></div>
+            <div class="contact-option-value"><span class="__cf_email__" data-cfemail="37545f455e44435e5219445656415253455677505a565e5b1954585a">christie.saavedra@gmail.com</span></div>
           </div>
         </a>
         
