google analytics added

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-MF6DGZ8N');</script>
-<!-- End Google Tag Manager --> 
- <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Christie Stephenson Saavedra | OCM & Instructional Design</title>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-MF6DGZ8N');</script>
+  <!-- End Google Tag Manager -->
+<title>Christie Stephenson Saavedra | OCM & Instructional Design</title>
   <meta name="description" content="Organizational Change Management and Instructional Design professional with 20+ years experience driving technology adoption through strategic communications and training development.">
   <link rel="icon" type="image/svg+xml" href="favicon.svg">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -1144,10 +1144,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   </style>
 </head>
 <body>
-<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MF6DGZ8N"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MF6DGZ8N"
+  height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
+
   <div class="page-wrapper">
 
     <!-- Navigation -->
@@ -1234,7 +1235,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="case-study-card" data-project="dashboard" onclick="window.location='dashboard.html'">
             <div class="case-study-meta">
               <span class="case-study-role">UX Designer / Developer</span>
-              <span class="case-study-org">· Healthcare Consulting</span>
+              <span class="case-study-org"> ·  Healthcare Consulting</span>
             </div>
             <h3 class="case-study-title">Healthcare Operations Dashboard</h3>
             <p class="case-study-desc">Designed and built a real-time surgery room utilization dashboard for a multi-hospital health system. Replaced quarterly reporting with live visibility.</p>
@@ -1249,7 +1250,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="case-study-card" data-project="codelab" onclick="window.location='codelab/index.html'">
             <div class="case-study-meta">
               <span class="case-study-role">Instructional Designer / Developer</span>
-              <span class="case-study-org">· XactechED · Xactware</span>
+              <span class="case-study-org"> ·  XactechED · Xactware</span>
             </div>
             <h3 class="case-study-title">Gamified Learning Platform</h3>
             <p class="case-study-desc">Built a gamified HTML & CSS learning platform using Hirumi's Three-Level Interaction Model. Features XP system, achievements, and mastery-based progression—demonstrating the curriculum approach I developed for the XactechED program.</p>
@@ -1263,7 +1264,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="case-study-card" data-project="xacteched" onclick="window.location='samples/xacteched-campaign.html'">
             <div class="case-study-meta">
               <span class="case-study-role">Training Manager</span>
-              <span class="case-study-org">· Xactware</span>
+              <span class="case-study-org"> ·  Xactware</span>
             </div>
             <h3 class="case-study-title">Workforce Development Program</h3>
             <p class="case-study-desc">Conceived and launched a statewide coding education program. Built the XactechED brand and delivered presentations to the governor's committee.</p>
@@ -1274,25 +1275,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <a href="samples/xacteched-campaign.html" class="case-study-link">View Campaign <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M5 12h14M12 5l7 7-7 7"/></svg></a>
           </div>
 
-          <div class="case-study-card" data-project="resolute" onclick="window.location='resolute/index.html'">
+          <div class="case-study-card" data-project="resolute" onclick="window.location='samples/resolute-services.html'">
             <div class="case-study-meta">
               <span class="case-study-role">IT Consultant / Co-founder</span>
-              <span class="case-study-org">· Resolute Services</span>
+              <span class="case-study-org"> ·  Resolute Services</span>
             </div>
             <h3 class="case-study-title">Healthcare Process Automation</h3>
             <p class="case-study-desc">Co-founded a healthcare IT company. Designed custom software and trained staff—achieving 90% automation of billing and payroll.</p>
             <div class="case-study-results">
               <span class="result-tag">90% Automation</span>
               <span class="result-tag">50% Time Saved</span>
-              <span class="result-tag">6 User Roles</span>
             </div>
-            <a href="resolute/index.html" class="case-study-link">View Demo <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M5 12h14M12 5l7 7-7 7"/></svg></a>
+            <a href="samples/resolute-services.html" class="case-study-link">View Case Study <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M5 12h14M12 5l7 7-7 7"/></svg></a>
           </div>
 
           <div class="case-study-card" data-project="arizona" onclick="window.location='samples/arizona-esthetics.html'">
             <div class="case-study-meta">
               <span class="case-study-role">Instructional Designer / Co-founder</span>
-              <span class="case-study-org">· Arizona Esthetics Institute</span>
+              <span class="case-study-org"> ·  Arizona Esthetics Institute</span>
             </div>
             <h3 class="case-study-title">Vocational Training Program</h3>
             <p class="case-study-desc">Co-founded a state-approved esthetics trade school. Developed curriculum meeting Arizona licensing requirements.</p>
@@ -1306,7 +1306,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="case-study-card" data-project="palmview" onclick="window.location='samples/palmview-lab.html'">
             <div class="case-study-meta">
               <span class="case-study-role">Computer Lab Manager</span>
-              <span class="case-study-org">· Palmview K-8</span>
+              <span class="case-study-org"> ·  Palmview K-8</span>
             </div>
             <h3 class="case-study-title">Technology Documentation</h3>
             <p class="case-study-desc">Managed technology operations for 500+ devices. Built a knowledge base and created quick-reference guides.</p>
@@ -1505,7 +1505,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <p class="modal-subtitle">Choose your preferred way to connect</p>
       
       <div class="contact-options">
-        <a href="christie.saavedra@gmail.com" class="contact-option">
+        <a href="/cdn-cgi/l/email-protection#92f1fae0fbe1e6fbf7bce1f3f3e4f7f6e0f3d2f5fff3fbfebcf1fdff" class="contact-option">
           <div class="contact-option-icon email">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
               <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
@@ -1514,7 +1514,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           </div>
           <div class="contact-option-text">
             <div class="contact-option-label">Email</div>
-            <div class="contact-option-value"><span class="__cf_email__" data-cfemail="37545f455e44435e5219445656415253455677505a565e5b1954585a">christie.saavedra@gmail.com</span></div>
+            <div class="contact-option-value"><span class="__cf_email__" data-cfemail="37545f455e44435e5219445656415253455677505a565e5b1954585a">[email&#160;protected]</span></div>
           </div>
         </a>
         
@@ -1570,18 +1570,4 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     }
 
     function closeContactModal(event) {
-      if (!event || event.target === contactModal) {
-        contactModal.classList.remove('active');
-        document.body.style.overflow = '';
-      }
-    }
-
-    // Close modal on Escape key
-    document.addEventListener('keydown', (e) => {
-      if (e.key === 'Escape' && contactModal.classList.contains('active')) {
-        closeContactModal();
-      }
-    });
-  </script>
-</body>
-</html>
+      if (!event || event.target === co
